# ScreenRecorder

./: .gitignore  README.md
Design/: donate.xd  icon.fla  screen recorder 色稿.ai  wechat_icon.xd
code/: Build.sh  BuildAndInstallAndRun.sh  BuildAndRun.sh  BuildRendererIndexAndRun.sh  BuildRendererVideoLibraryAndRun.sh  BuildScreenRecorderBuilderEnvDockerImage.sh  CMakeLists.txt  Dockerfile  Production.sh  Run.sh  RunDocker.sh  gulpfile.js  index.html  package.json
code/src/commons/: ElectronGlobals.cpp  ElectronGlobals.h  LocalStorageManager.cpp  LocalStorageManager.h  Res.cpp  Res.h  SRGlobals.cpp  SRGlobals.h  SRVReaderTask.cpp  SRVReaderTask.h  SRWindows.cpp  SRWindows.h  md5.cpp  md5.h  node_globals.cpp  node_globals.h
code/src/commons/worker/: SRVConfig.cpp  SRVConfig.h  SRVReader.cpp  SRVReader.h  SRVWebM.cpp  SRVWebM.h  WorkerGlobals.cpp  WorkerGlobals.h
code/src/lib/jquery-ui-1.12.1.custom/: jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css
code/src/main/: main.js
code/src/renderers/PendingToStart/: build.js
code/src/renderers/SRVPlayer/: CMakeLists.txt  SRVPlayer.html  SRVPlayerEntry.cpp  SRVPlayerEntry.h  build.js  main.cpp
code/src/renderers/ScreenChooser/: CMakeLists.txt  ScreenChooser.html  ScreenChooserEntry.cpp  ScreenChooserEntry.h  ScreenSourceList.cpp  ScreenSourceList.h  ScreenSourceListItem.cpp  ScreenSourceListItem.h  build.js  main.cpp
code/src/renderers/SrvReaderTaskImpl/: CMakeLists.txt  build.js  main.cpp
code/src/renderers/VideoLibrary/: CMakeLists.txt  ExportVideoTask.cpp  ExportVideoTask.h  VideoFileListItem.cpp  VideoFileListItem.h  VideoLibrary.html  VideoLibraryEntry.cpp  VideoLibraryEntry.h  build.js  main.cpp
code/src/renderers/about/: CMakeLists.txt  about.html  build.js  main.cpp
code/src/renderers/index/: CMakeLists.txt  Entry.cpp  Entry.h  SelectAudioInput.cpp  SelectAudioInput.h  StreamQueue.cpp  StreamQueue.h  build.js  index.html  main.cpp
code/src/renderers/settings/: CMakeLists.txt  SettingsEntry.cpp  SettingsEntry.h  build.js  main.cpp  settings.html
code/tests/ReadSRV/: CMakeLists.txt  main.cpp
codev2/: gulpfile.js  main.js  package.json  webpack.config.js
codev2/src/renderers/PendingToStart/: PendingToStart.html
codev2/src/renderers/ScreenChooser/: ScreenChooser.html  ScreenChooser.js
codev2/src/renderers/about/: about.html
codev2/src/renderers/commons/: Dialogs.js  FlexBoxApplication.js  LocalStorageManager.js  Tools.js  WorkerDataCommand.js
codev2/src/renderers/commons/workers/SrvReader/: SrvReaderWorker.js
codev2/src/renderers/donate/: donate.html
codev2/src/renderers/index/: AudioDeviceSelectorConfig.js  CheckBoxIncludeComputerAudioConfig.js  IndexEntry.js  RecordStatus.js  StreamQueue.js  index.html
codev2/src/renderers/settings/: settings.html  settings.js
codev2/src/renderers/videolibrary/: SrvListConfig.js  SrvListItemComponent.js  SrvListItemData.js  VideoLibrary.html  VideoLibrary.js
docs/: Interfaces between main thread and web worker thread.md  SRV File Description v2.md  SRV File description v1.md
