add_executable(ScreenChooser
        main.cpp
        ScreenChooserEntry.cpp ScreenChooserEntry.h
        ../../commons/node_globals.h ../../commons/node_globals.cpp
        ../../commons/LocalStorageManager.cpp ../../commons/LocalStorageManager.h
        ScreenSourceList.cpp ScreenSourceList.h ScreenSourceListItem.cpp ScreenSourceListItem.h
        ../../commons/ElectronGlobals.cpp ../../commons/ElectronGlobals.h)